@@ -1,6 +1,11 @@
 # ChangeLog for Gentoo System Intialization ("rc") scripts
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2
 
+  19 Oct 2006; Roy Marples <uberlord@gentoo.org>:
+
+    start-stop-daemon now stops correctly on FreeBSD is /proc is not
+    mounted.
+
 * baselayout-1.13.0_alpha2 (16 Oct 2006)
 
   16 Oct 2006; Roy Marples <uberlord@gentoo.org>:
